feat: controller and repository validation for duplicated project